[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/PlainPreconfPopup.gd" type="Script" id=1]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="PlainPreconfPopup" type="Popup"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -228.0
margin_top = -138.5
margin_right = 228.0
margin_bottom = 138.5
color = Color( 0.223529, 0.223529, 0.223529, 1 )

[node name="MarginContainer" type="MarginContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="Label" type="Label" parent="Background/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 446.0
margin_bottom = 267.0
size_flags_vertical = 5
text = "Choose Plain Quantile Coloring Preconfiguration
"
align = 1

[node name="MarginContainer" type="MarginContainer" parent="Background/MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 446.0
margin_bottom = 267.0
custom_constants/margin_top = 40

[node name="GridContainer" type="GridContainer" parent="Background/MarginContainer/MarginContainer"]
margin_top = 40.0
margin_right = 436.0
margin_bottom = 257.0
custom_constants/vseparation = 5
custom_constants/hseparation = 5
columns = 2

[node name="PanelName" type="Panel" parent="Background/MarginContainer/MarginContainer/GridContainer"]
margin_right = 100.0
margin_bottom = 20.0

[node name="ConfName" type="Label" parent="Background/MarginContainer/MarginContainer/GridContainer/PanelName"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/normal = SubResource( 1 )
text = "Alpha"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Background/MarginContainer/MarginContainer/GridContainer"]
margin_left = 105.0
margin_right = 436.0
margin_bottom = 20.0

[node name="Panel0" type="Panel" parent="Background/MarginContainer/MarginContainer/GridContainer/HBoxContainer"]
margin_right = 96.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Value" type="Label" parent="Background/MarginContainer/MarginContainer/GridContainer/HBoxContainer/Panel0"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/normal = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="0ColorButton" type="ColorPickerButton" parent="Background/MarginContainer/MarginContainer/GridContainer/HBoxContainer"]
margin_left = 100.0
margin_right = 196.0
margin_bottom = 20.0
size_flags_horizontal = 3
disabled = true
color = Color( 0, 0, 0, 0.498039 )

[node name="Panel1" type="Panel" parent="Background/MarginContainer/MarginContainer/GridContainer/HBoxContainer"]
margin_left = 200.0
margin_right = 296.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Value" type="Label" parent="Background/MarginContainer/MarginContainer/GridContainer/HBoxContainer/Panel1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/normal = SubResource( 1 )
text = "1"
align = 1
valign = 1

[node name="OKButton1" type="Button" parent="Background/MarginContainer/MarginContainer/GridContainer/HBoxContainer"]
margin_left = 300.0
margin_right = 331.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
text = "OK"

[node name="PanelName2" type="Panel" parent="Background/MarginContainer/MarginContainer/GridContainer"]
margin_top = 25.0
margin_right = 100.0
margin_bottom = 45.0
rect_min_size = Vector2( 100, 0 )

[node name="ConfName" type="Label" parent="Background/MarginContainer/MarginContainer/GridContainer/PanelName2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/normal = SubResource( 1 )
text = "GrRE"
align = 1
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="Background/MarginContainer/MarginContainer/GridContainer"]
margin_left = 105.0
margin_top = 25.0
margin_right = 436.0
margin_bottom = 45.0
size_flags_horizontal = 3

[node name="Panel0" type="Panel" parent="Background/MarginContainer/MarginContainer/GridContainer/HBoxContainer2"]
margin_right = 56.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Value" type="Label" parent="Background/MarginContainer/MarginContainer/GridContainer/HBoxContainer2/Panel0"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/normal = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="0ColorButton" type="ColorPickerButton" parent="Background/MarginContainer/MarginContainer/GridContainer/HBoxContainer2"]
margin_left = 60.0
margin_right = 116.0
margin_bottom = 20.0
size_flags_horizontal = 3
disabled = true
color = Color( 0.164706, 0.643137, 0.113725, 1 )

[node name="Panel5" type="Panel" parent="Background/MarginContainer/MarginContainer/GridContainer/HBoxContainer2"]
margin_left = 120.0
margin_right = 176.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Value" type="Label" parent="Background/MarginContainer/MarginContainer/GridContainer/HBoxContainer2/Panel5"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/normal = SubResource( 1 )
text = "0.5"
align = 1
valign = 1

[node name="0ColorButton2" type="ColorPickerButton" parent="Background/MarginContainer/MarginContainer/GridContainer/HBoxContainer2"]
margin_left = 180.0
margin_right = 236.0
margin_bottom = 20.0
size_flags_horizontal = 3
disabled = true
color = Color( 0.776471, 0.176471, 0.176471, 1 )

[node name="Panel1" type="Panel" parent="Background/MarginContainer/MarginContainer/GridContainer/HBoxContainer2"]
margin_left = 240.0
margin_right = 296.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Value" type="Label" parent="Background/MarginContainer/MarginContainer/GridContainer/HBoxContainer2/Panel1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/normal = SubResource( 1 )
text = "1"
align = 1
valign = 1

[node name="OKButton2" type="Button" parent="Background/MarginContainer/MarginContainer/GridContainer/HBoxContainer2"]
margin_left = 300.0
margin_right = 331.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
text = "OK"

[node name="PanelName3" type="Panel" parent="Background/MarginContainer/MarginContainer/GridContainer"]
margin_top = 50.0
margin_right = 100.0
margin_bottom = 70.0
rect_min_size = Vector2( 100, 0 )

[node name="ConfName" type="Label" parent="Background/MarginContainer/MarginContainer/GridContainer/PanelName3"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/normal = SubResource( 1 )
text = "GrYeOrRe"
align = 1
valign = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="Background/MarginContainer/MarginContainer/GridContainer"]
margin_left = 105.0
margin_top = 50.0
margin_right = 436.0
margin_bottom = 70.0
size_flags_horizontal = 3

[node name="Panel0" type="Panel" parent="Background/MarginContainer/MarginContainer/GridContainer/HBoxContainer3"]
margin_right = 29.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Value" type="Label" parent="Background/MarginContainer/MarginContainer/GridContainer/HBoxContainer3/Panel0"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/normal = SubResource( 1 )
text = "0"
align = 1
valign = 1

[node name="0ColorButton" type="ColorPickerButton" parent="Background/MarginContainer/MarginContainer/GridContainer/HBoxContainer3"]
margin_left = 33.0
margin_right = 62.0
margin_bottom = 20.0
size_flags_horizontal = 3
disabled = true
color = Color( 0.164706, 0.643137, 0.113725, 1 )

[node name="Panel25" type="Panel" parent="Background/MarginContainer/MarginContainer/GridContainer/HBoxContainer3"]
margin_left = 66.0
margin_right = 96.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Value" type="Label" parent="Background/MarginContainer/MarginContainer/GridContainer/HBoxContainer3/Panel25"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/normal = SubResource( 1 )
text = "0.25"
align = 1
valign = 1

[node name="25ColorButton" type="ColorPickerButton" parent="Background/MarginContainer/MarginContainer/GridContainer/HBoxContainer3"]
margin_left = 100.0
margin_right = 129.0
margin_bottom = 20.0
size_flags_horizontal = 3
disabled = true
color = Color( 0.827451, 0.780392, 0.0784314, 1 )

[node name="Panel5" type="Panel" parent="Background/MarginContainer/MarginContainer/GridContainer/HBoxContainer3"]
margin_left = 133.0
margin_right = 162.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Value" type="Label" parent="Background/MarginContainer/MarginContainer/GridContainer/HBoxContainer3/Panel5"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/normal = SubResource( 1 )
text = "0.5"
align = 1
valign = 1

[node name="0ColorButton2" type="ColorPickerButton" parent="Background/MarginContainer/MarginContainer/GridContainer/HBoxContainer3"]
margin_left = 166.0
margin_right = 196.0
margin_bottom = 20.0
size_flags_horizontal = 3
disabled = true
color = Color( 0.835294, 0.494118, 0.0901961, 1 )

[node name="Panel75" type="Panel" parent="Background/MarginContainer/MarginContainer/GridContainer/HBoxContainer3"]
margin_left = 200.0
margin_right = 229.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Value" type="Label" parent="Background/MarginContainer/MarginContainer/GridContainer/HBoxContainer3/Panel75"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/normal = SubResource( 1 )
text = "0.75"
align = 1
valign = 1

[node name="75ColorButton" type="ColorPickerButton" parent="Background/MarginContainer/MarginContainer/GridContainer/HBoxContainer3"]
margin_left = 233.0
margin_right = 262.0
margin_bottom = 20.0
size_flags_horizontal = 3
disabled = true
color = Color( 0.776471, 0.176471, 0.176471, 1 )

[node name="Panel1" type="Panel" parent="Background/MarginContainer/MarginContainer/GridContainer/HBoxContainer3"]
margin_left = 266.0
margin_right = 296.0
margin_bottom = 20.0
size_flags_horizontal = 3

[node name="Value" type="Label" parent="Background/MarginContainer/MarginContainer/GridContainer/HBoxContainer3/Panel1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/normal = SubResource( 1 )
text = "1"
align = 1
valign = 1

[node name="OKButton3" type="Button" parent="Background/MarginContainer/MarginContainer/GridContainer/HBoxContainer3"]
margin_left = 300.0
margin_right = 331.0
margin_bottom = 20.0
mouse_default_cursor_shape = 2
text = "OK"

[connection signal="pressed" from="Background/MarginContainer/MarginContainer/GridContainer/HBoxContainer/OKButton1" to="." method="_on_OKButton1_pressed"]
[connection signal="pressed" from="Background/MarginContainer/MarginContainer/GridContainer/HBoxContainer2/OKButton2" to="." method="_on_OKButton2_pressed"]
[connection signal="pressed" from="Background/MarginContainer/MarginContainer/GridContainer/HBoxContainer3/OKButton3" to="." method="_on_OKButton3_pressed"]
